# macos

./: Cargo.toml  README.md
appkit/: Cargo.toml
appkit/examples/: create_window.rs
appkit/src/: application.rs  lib.rs  window.rs
examples/: window_builder.rs
foundation/: Cargo.toml  README.md
foundation/src/: fundamental.rs  lib.rs  objc_runtime.rs
foundation/src/fundamental/: number.rs
generater/: Cargo.toml
generater/src/: main.rs
macos-appkit/: Cargo.toml  README.md
macos-appkit/src/: foundation.rs  lib.rs
macos-foundation/: Cargo.toml
macos-foundation/src/: fundamentals.rs  lib.rs  objc_runtime.rs
macos-foundation/src/fundamentals/: basic.rs
src/: foundation.rs  lib.rs  window.rs
src/window/: color.rs
